[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/UI/InputRoman.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="."]
margin_left = 177.0
margin_top = 491.0
margin_right = 227.0
margin_bottom = 541.0
text = "1"

[node name="Button2" type="Button" parent="."]
margin_left = 247.0
margin_top = 491.0
margin_right = 297.0
margin_bottom = 541.0
text = "2"

[node name="Button3" type="Button" parent="."]
margin_left = 319.0
margin_top = 490.0
margin_right = 369.0
margin_bottom = 540.0
text = "3"

[node name="Button4" type="Button" parent="."]
margin_left = 392.0
margin_top = 490.0
margin_right = 442.0
margin_bottom = 540.0
text = "4"

[node name="Button5" type="Button" parent="."]
margin_left = 463.0
margin_top = 490.0
margin_right = 513.0
margin_bottom = 540.0
text = "5"

[node name="Button6" type="Button" parent="."]
margin_left = 531.0
margin_top = 489.0
margin_right = 581.0
margin_bottom = 539.0
text = "6"

[node name="Button7" type="Button" parent="."]
margin_left = 599.0
margin_top = 490.0
margin_right = 649.0
margin_bottom = 540.0
text = "7"

[node name="Button8" type="Button" parent="."]
margin_left = 666.0
margin_top = 489.0
margin_right = 716.0
margin_bottom = 539.0
text = "8"

[node name="Button9" type="Button" parent="."]
margin_left = 732.0
margin_top = 488.0
margin_right = 782.0
margin_bottom = 538.0
text = "9"

[node name="Eliminate" type="Button" parent="."]
margin_left = 801.0
margin_top = 488.0
margin_right = 851.0
margin_bottom = 538.0
text = "<---"

[node name="Input" type="RichTextLabel" parent="."]
margin_left = 438.0
margin_top = 254.0
margin_right = 478.0
margin_bottom = 294.0
script = ExtResource( 1 )

[node name="Warning" type="RichTextLabel" parent="."]
margin_left = 424.0
margin_top = 332.0
margin_right = 582.0
margin_bottom = 372.0

[connection signal="pressed" from="Button" to="Input" method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="Input" method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="Input" method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="Input" method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="Input" method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="Input" method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="Input" method="_on_Button7_pressed"]
[connection signal="pressed" from="Button8" to="Input" method="_on_Button8_pressed"]
[connection signal="pressed" from="Button9" to="Input" method="_on_Button9_pressed"]
[connection signal="pressed" from="Eliminate" to="Input" method="_on_Eliminate_pressed"]
